objects/cc_oo_ContractPrice__c.object
<CustomObject>
    <fields>
        <fullName>cc_oo_AvailabilityQtyUoMContract__c</fullName>
        <label>Availability Qty UoM Contract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_AvailabilityQty__c</fullName>
        <label>Availbility Quantity (Balance)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_CommitedQty__c</fullName>
        <label>Commited Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_ContractNumber__c</fullName>
        <label>ContractNumber</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_ContractPrice__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cc_oo_ContractQty__c</fullName>
        <label>Contract Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_ContractSequence__c</fullName>
        <label>Sequence  Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_ContractUoMDesc__c</fullName>
        <label>Contract UoM Description</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_ContractUoM__c</fullName>
        <label>Contract UoM</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_ConversionValue__c</fullName>
        <label>Price Conversion Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_DwChecksum__c</fullName>
        <label>DW Checksum</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cc_oo_EndUserName__c</fullName>
        <label>EndUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_ExpireDate__c</fullName>
        <label>Expire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cc_oo_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CC Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>CC OO ContractPrices</relationshipLabel>
        <relationshipName>CC_OO_ContractPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_QuantityUpdateDate__c</fullName>
        <label>Balance Update date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cc_oo_RouteCode__c</fullName>
        <label>Route Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cc_oo_Seller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Seller</label>
        <referenceTo>ccrz__E_Seller__c</referenceTo>
        <relationshipLabel>CC OO ContractPrices</relationshipLabel>
        <relationshipName>CC_OO_ContractPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_ShipConfirm__c</fullName>
        <label>Ship Confirm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cc_oo_ShipToNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Number</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CC OO ContractPrices</relationshipLabel>
        <relationshipName>CC_OO_ContractPrices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cc_oo_contractPriceID__c</fullName>
        <externalId>true</externalId>
        <label>Contract price id</label>
        <length>225</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cc_oo_isfreightincluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsFreightIncluded</label>
        <type>Checkbox</type>
    </fields>
    <label>CC OO ContractPrice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>cc_oo_ContractNumber__c</columns>
        <columns>cc_oo_ShipToNumber__c</columns>
        <columns>cc_oo_Seller__c</columns>
        <columns>cc_oo_ExpireDate__c</columns>
        <columns>cc_oo_Product__c</columns>
        <columns>cc_oo_ContractPrice__c</columns>
        <columns>cc_oo_ContractUoMDesc__c</columns>
        <columns>cc_oo_AvailabilityQtyUoMContract__c</columns>
        <columns>cc_oo_AvailabilityQty__c</columns>
        <columns>cc_oo_ContractUoM__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>cotneact-wmc</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>ContractPriceID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC OO ContractPrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>